--- a/src/index.css
+++ b/src/index.css
@@ -163,7 +163,7 @@ tr:nth-child(even) {
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-
+  margin-left: 10px;
 }
 
 .themeButton:hover {
