--- a/src/index.css
+++ b/src/index.css
@@ -83,7 +83,6 @@ form {
 
 .card {
   display: flex;
-  justify-content: space-around;
   flex-direction: column;
   align-items: center;
   width: 200px;
@@ -91,6 +90,8 @@ form {
   border: 0.5px solid rgb(136, 136, 136);
   transition: border-color 0.3s ease-in-out;
   cursor: pointer;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 .card:hover {
@@ -104,6 +105,62 @@ form {
   width: 90vw;
   max-width: 1200px;
   margin: 0 auto;
+}
+
+.card__image {
+  width: 100px;
+  height: 100px;
+}
+
+.card__title {
+  font-size: 1.2rem;
+  margin-top: 0.5rem;
+}
+
+.card__username {
+  font-size: 1rem;
+  color: #888888;
+}
+
+.card__id {
+  font-size: 0.8rem;
+  color: #888888;
+  margin-bottom: 0.5rem;
+}
+
+.card__button {
+  background-color: rgba(136, 136, 136, 0.116);
+  padding: 10px;
+  border: none;
+  width: 100%;
+  cursor: pointer;
+}
+
+.card__button:hover {
+  background-color: rgba(206, 217, 142, 0.116);
+}
+
+.card__link {
+  color: #000000;
+  text-decoration: none;
+  margin-top: 0.5rem;
+}
+
+.card.dark {
+  background-color: #12121296;
+  color: white;
+}
+
+.card.dark .card__button {
+  background-color: rgba(255, 255, 255, 0.116);
+}
+
+.card.dark .card__button:hover {
+  background-color: rgba(206, 217, 142, 0.116);
+}
+
+.card.dark .card__link {
+  color: white;
 }
 
 .cards {
