--- a/src/index.css
+++ b/src/index.css
@@ -165,9 +165,11 @@ form {
 }
 
 .cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-  grid-gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 3vh;
+  margin-top: 3vh;
 }
 
 table {
