--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ h1 {
   text-align: center;
 }
 
-nav {
+.Navbar {
   display: flex;
   width: 100vw;
   align-items: center;
@@ -32,20 +32,32 @@ nav {
   padding: 1rem;
 }
 
-nav ul {
+.Navbar__list {
   display: flex;
   list-style: none;
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 a {
-  color: #000;
   text-decoration: none;
-  margin: 5px;
-  cursor: pointer;
+  color: #000;
+  font-size: 1.1em;
 }
 
-a:hover {
+.Navbar__item a {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+  font-size: 1.4em;
+}
+
+.Navbar__item a:hover {
   color: rgb(136, 136, 136);
+}
+
+.Navbar.dark .Navbar__item a:hover {
+  color:#6c63ff;
 }
 
 footer {
@@ -88,39 +100,56 @@ form {
   align-items: center;
   width: 200px;
   padding: 0.5rem;
+  margin-bottom: 15px;
   border: 0.5px solid rgb(136, 136, 136);
   transition: border-color 0.3s ease-in-out;
   cursor: pointer;
   background-color: #ffffff;
   color: #000000;
+  -webkit-box-shadow: 6px 3px 4px -3px rgba(0,0,0,0.48);
+  -moz-box-shadow: 6px 3px 4px -3px rgba(0,0,0,0.48);
+  box-shadow: 6px 3px 4px -3px rgba(0,0,0,0.48);
+  transform: scale(1);
+  transition: transform 0.3s ease-in-out;
 }
 
 .card:hover {
   border-color: rgb(206, 217, 142);
+  transform: scale(1.05);
 }
 
 .card-grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 90vw;
   max-width: 1200px;
   margin: 0 auto;
 }
 
 .card__image {
-  width: 100px;
-  height: 100px;
+  width: 100%;
 }
 
 .card__title {
   font-size: 1.2rem;
   margin-top: 0.5rem;
+  width: 100%;
+  margin-top: 0;
+  margin-bottom: 5px;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.dark > .card__title{
+  background-color: #6c63ff;
+  
 }
 
 .card__username {
   font-size: 1rem;
   color: #888888;
+  margin-top: 0;
 }
 
 .card__id {
@@ -129,12 +158,20 @@ form {
   margin-bottom: 0.5rem;
 }
 
+.card__button__area{
+  display: flex;
+}
+
 .card__button {
   background-color: rgba(136, 136, 136, 0.116);
   padding: 10px;
   border: none;
-  width: 100%;
   cursor: pointer;
+  display: inline-block;
+  border-radius: 4px;
+  font-size: 1.1em;
+  margin-left: 2px;
+  margin-right: 3px;
 }
 
 .card__button:hover {
@@ -142,9 +179,18 @@ form {
 }
 
 .card__link {
+  display: inline-block;
+  padding: 10px;
+  border: none;
+  background-color: rgba(136, 136, 136, 0.116);
   color: #000000;
   text-decoration: none;
-  margin-top: 0.5rem;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.card__link:hover {
+  background-color: rgba(206, 217, 142, 0.116);
 }
 
 .card.dark {
@@ -154,6 +200,7 @@ form {
 
 .card.dark .card__button {
   background-color: rgba(255, 255, 255, 0.116);
+  color: #f9f9f9;
 }
 
 .card.dark .card__button:hover {
@@ -200,6 +247,14 @@ tr:nth-child(even) {
   color: white;
 }
 
+.Navbar{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+}
+
 .Navbar.light {
   background-color: #ffffff;
   color: #000000;
@@ -208,6 +263,23 @@ tr:nth-child(even) {
 .Navbar.dark {
   background-color: #000000;
   color: #ffffff;
+}
+
+.Navbar.dark .Navbar__item a{
+  color: #fff;
+}
+
+.Navbar__item{
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.Navbar__list{
+  align-items: center;
+}
+
+.Navbar__list.dark{
+  background-color: #000;
 }
 
 .App {
