--- a/src/index.css
+++ b/src/index.css
@@ -60,29 +60,7 @@ a {
   color:#6c63ff;
 }
 
-footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 2rem;
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  height: 40px;
-  margin-top: 2rem;
-  background-color: #f9f9f9;
-}
 
-footer > img {
-  width: 200px;
-  margin: 0;
-}
-
-footer > p {
-  margin: 0;
-  padding-top: 0.7rem;
-}
 
 form {
   display: flex;
@@ -359,6 +337,34 @@ tr:nth-child(even) {
 .dark .formInput {
   color: #fff;
 }
+
+/* Estilos del footer*/
+
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+  margin-top: 2rem;
+  background-color: #f9f9f9;
+}
+
+footer > img {
+  width: 200px;
+  margin: 0;
+}
+
+footer > p {
+  margin: 0;
+  padding-top: 0.7rem;
+}
+
+
 
 /* Easter Egg */
 body::after {
