--- a/src/index.css
+++ b/src/index.css
@@ -76,10 +76,8 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 300px;
-  height: 100px;
   margin-bottom: 20px;
-  padding: 60px;
+  padding: 30px;
 }
 
 .card {
@@ -312,7 +310,6 @@ tr:nth-child(even) {
 
 .formDescription {
   font-size: 16px;
-  margin-bottom: 60px;
   color: #000;
   padding: 5px;
 }
@@ -340,6 +337,7 @@ tr:nth-child(even) {
   padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
+  margin: 15px;
 }
 
 .formButton:hover {
